--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.4",
+    "node-sass": "^4.14.1",
     "prettier": "^2.0.5"
   }
 }
